add user registeration and update password pages

--- a/auth-site/authenticate/templates/authenicate/change_password.html
+++ b/auth-site/authenticate/templates/authenicate/change_password.html
@@ -1,10 +1,12 @@
 {% extends "authenicate\base.html" %}
 {% block content %}
 <h1>Communication Station</h1>
-<h2>This is the registration page</h2>
+<br>
+<h2>Change Password Page</h2>
 
 <div class="col-md-6 offset-md-3"></div>
-<form method="POST" actions="{% url 'register' %}">
+<form method="POST" action="{% url 'change_password' %}">
+
     {% csrf_token %}
 
     {% if form.errors %}
@@ -12,12 +14,12 @@
         <button class='close' data-dimiss='alert'>
             <small> <sup>x</sup></small>
         </button>
-     <p>Your form has errors. Please try again.</p>
+     <p>Your profile has not been updated. Please try again.</p>
     {% endif %}
 
     {{form.as_p}}
     
-    <input type="submit" value="Register" class="btn btn-secondary">
+    <input type="submit" value="Change Password" class="btn btn-secondary">
 </form>
 
 {% endblock %}
