--- a/auth-site/authenticate/templates/authenicate/base.html
+++ b/auth-site/authenticate/templates/authenicate/base.html
@@ -31,6 +31,10 @@
                 <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                     <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Log Out</a>
+
+                    <a class="nav-link active" aria-current="page" href="{% url 'edit_profile' %}">Edit Profile</a>
+
+                    <a class="nav-link active" aria-current="page" href="{% url 'change_password' %}">Change Password</a>
                     {% else %}
     
                     <a class="nav-link active" aria-current="page" href="{% url 'loginpage' %}">Login</a>
